manifests/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - loki.g2dev.net
  rules:
  - host: loki.g2dev.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-gateway
            port:
              number: 80
